--- a/app/globals.css
+++ b/app/globals.css
@@ -20,7 +20,23 @@
 }
 
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  margin: 0;
+  padding: 0;
+}
+
+.LightMode {
+  background-color: #F9FAFB ;
+  color: #111827;
+}
+.DarkMode {
+  background-color: #1F2937  ;
+  color: #F9FAFB;
+}
+.LightModesection {
+  background-color: #F9FAFB ;
+  color: #6B7280 ;
+}
+.DarkModesection {
+  background-color: #1F2937  ;
+  color: #a0af9c;
 }
