--- a/app/globals.css
+++ b/app/globals.css
@@ -40,3 +40,8 @@ body {
   background-color: #1F2937  ;
   color: #a0af9c;
 }
+
+.bgHero {
+  background-image: url(https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExYTZyMXNnemVkNWJ6MzZjNXBqNmgwcmE0d3dyeHdncm5pcnU4OHZuOCZlcD12MV9naWZzX3NlYXJjaCZjdD1n/QpVUMRUJGokfqXyfa1/giphy.gif);
+  background-size: cover;
+}
