--- a/app/backgroundprofile.css
+++ b/app/backgroundprofile.css
@@ -3,8 +3,8 @@
     display: table;
     width: 100%;
     height: 100%;
-    background-color: #111;  /* Background color */
-    color: #f2f2f2;  /* Text color */
+    background-color: #111;
+    color: #f2f2f2; 
     line-height: 1.6;
     position: relative;
     font-family: sans-serif;
@@ -20,14 +20,13 @@
     margin: auto;
     width: 90vw;
     display: flex;
-    justify-content: space-between; /* Distribute lines evenly */
+    justify-content: space-between;
   }
   
   .line {
     position: relative;
     width: 7px;
     height: 100%;
-    /*background: #ffffff;  /* Line color */
     overflow: hidden;
   }
   
@@ -45,7 +44,6 @@
     animation-timing-function: cubic-bezier(0.4, 0.26, 0, 0.97);
   }
   
-  /* Different colors for each line's pseudo-element */
   .line:nth-child(1)::after {
     background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, #FF4500 75%, #FF4500 100%);
     animation-delay: 0.5s;
@@ -103,4 +101,159 @@
     100% {
       top: 110%;
     }
+  }
+
+  
+  .card {
+    position: relative;
+    overflow: hidden;
+    border-top: 1px solid rgba(255, 49, 49, 0.5);
+    border-right: 1px solid rgba(0, 255, 255, 0.5);
+    border-bottom: 1px solid rgba(57, 255, 20, 0.5);
+    border-left: 1px solid rgba(255, 255, 113, 0.5);
+    font-family: sans-serif;
+  }
+  
+  .card p {
+    font-size: 0.95rem;
+    text-align: center;
+  }
+  
+  .card span {
+    position: absolute;
+    border-radius: 100vmax;
+  }
+  
+  .top {
+    top: 0;
+    left: 0;
+    width: 0;
+    height: 5px;
+    background: linear-gradient(
+      90deg,
+      transparent 50%,
+      rgba(255, 49, 49, 0.5),
+      rgb(255, 49, 49)
+    );
+  }
+  
+  .bottom {
+    right: 0;
+    bottom: 0;
+    height: 5px;
+    background: linear-gradient(
+      90deg,
+      rgb(57, 255, 20),
+      rgba(57, 255, 20, 0.5),
+      transparent 50%
+    );
+  }
+  
+  .right {
+    top: 0;
+    right: 0;
+    width: 5px;
+    height: 0;
+    background: linear-gradient(
+      180deg,
+      transparent 30%,
+      rgba(0, 255, 255, 0.5),
+      rgb(0, 255, 255)
+    );
+  }
+  
+  .left {
+    left: 0;
+    bottom: 0;
+    width: 5px;
+    height: 0;
+    background: linear-gradient(
+      180deg,
+      rgb(255, 255, 113),
+      rgba(255, 255, 113, 0.5),
+      transparent 70%
+    );
+  }
+  
+  .top {
+    animation: animateTop 3s ease-in-out infinite;
+  }
+  
+  .bottom {
+    animation: animateBottom 3s ease-in-out infinite;
+  }
+  
+  .right {
+    animation: animateRight 3s ease-in-out infinite;
+  }
+  
+  .left {
+    animation: animateLeft 3s ease-in-out infinite;
+  }
+  
+  @keyframes animateTop {
+    25% {
+      width: 100%;
+      opacity: 1;
+    }
+  
+    30%,
+    100% {
+      opacity: 0;
+    }
+  }
+  
+  @keyframes animateBottom {
+    0%,
+    50% {
+      opacity: 0;
+      width: 0;
+    }
+  
+    75% {
+      opacity: 1;
+      width: 100%;
+    }
+  
+    76%,
+    100% {
+      opacity: 0;
+    }
+  }
+  
+  @keyframes animateRight {
+    0%,
+    25% {
+      opacity: 0;
+      height: 0;
+    }
+  
+    50% {
+      opacity: 1;
+      height: 100%;
+    }
+  
+    55%,
+    100% {
+      height: 100%;
+      opacity: 0;
+    }
+  }
+  
+  @keyframes animateLeft {
+    0%,
+    75% {
+      opacity: 0;
+      bottom: 0;
+      height: 0;
+    }
+  
+    100% {
+      opacity: 1;
+      height: 100%;
+    }
+  }
+  .bgHeroGIF {
+    background-image: url(https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExYTZyMXNnemVkNWJ6MzZjNXBqNmgwcmE0d3dyeHdncm5pcnU4OHZuOCZlcD12MV9naWZzX3NlYXJjaCZjdD1n/QpVUMRUJGokfqXyfa1/giphy.gif);
+    background-size: cover;
   }
