--- a/app/globals.css
+++ b/app/globals.css
@@ -45,3 +45,16 @@ body {
   background-image: url(https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExYTZyMXNnemVkNWJ6MzZjNXBqNmgwcmE0d3dyeHdncm5pcnU4OHZuOCZlcD12MV9naWZzX3NlYXJjaCZjdD1n/QpVUMRUJGokfqXyfa1/giphy.gif);
   background-size: cover;
 }
+.neon-text {
+  text-shadow: 0 0 5px #ff005e, 0 0 10px #ff005e, 0 0 20px #ff005e, 0 0 40px #ff005e, 0 0 80px #ff005e;
+  animation: glow 1.5s infinite alternate;
+}
+
+@keyframes glow {
+  0% {
+      text-shadow: 0 0 5px #ff005e, 0 0 10px #ff005e, 0 0 20px #ff005e, 0 0 40px #ff005e, 0 0 80px #ff005e;
+  }
+  100% {
+      text-shadow: 0 0 10px #00d4ff, 0 0 20px #00d4ff, 0 0 40px #00d4ff, 0 0 80px #00d4ff, 0 0 160px #00d4ff;
+  }
+}
